[gd_scene load_steps=6 format=3 uid="uid://cgv3yceem6wa2"]

[ext_resource type="Texture2D" uid="uid://ctjllnxlmfdhn" path="res://assets/table/craps_table.png" id="1_bqwhp"]
[ext_resource type="Script" path="res://scripts/CrapsScene.gd" id="1_ovmvb"]
[ext_resource type="Script" path="res://scripts/DiceManager.gd" id="3_dl2u6"]
[ext_resource type="Script" path="res://scripts/ChipManager.gd" id="4_b4j4d"]
[ext_resource type="Script" path="res://scripts/BetManager.gd" id="4_ymwad"]

[node name="CrapsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovmvb")

[node name="Table" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_bqwhp")

[node name="BettingAreas" type="Node2D" parent="Table"]

[node name="PassLine" type="Area2D" parent="Table/BettingAreas"]

[node name="DontPass" type="Area2D" parent="Table/BettingAreas"]

[node name="Come" type="Area2D" parent="Table/BettingAreas"]

[node name="DontCome" type="Area2D" parent="Table/BettingAreas"]

[node name="Field" type="Area2D" parent="Table/BettingAreas"]

[node name="Hardways" type="Area2D" parent="Table/BettingAreas"]

[node name="OneRoll" type="Area2D" parent="Table/BettingAreas"]

[node name="DiceManager" type="Node2D" parent="."]
position = Vector2(480, 480)
script = ExtResource("3_dl2u6")

[node name="Die1" type="Sprite2D" parent="DiceManager"]
position = Vector2(40, 40)

[node name="Die2" type="Sprite2D" parent="DiceManager"]
position = Vector2(80, 80)

[node name="ChipManager" type="Node2D" parent="."]
script = ExtResource("4_b4j4d")

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BetAmountSelector" type="SpinBox" parent="Controls"]
layout_mode = 2

[node name="RollButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Roll"

[node name="ClearBetsButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Clear Bets"

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BalanceLabel" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CurrentPointLabel" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LastRollLabel" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BetInfoLabel" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BetManager" type="Node2D" parent="."]
script = ExtResource("4_ymwad")
